fix: resolve Spring Boot backend bugs
- JwtAuthenticationFilter: read Authorization Bearer header first, fallback to accessToken cookie
- SecurityConfig: merge setAllowedOrigins duplicate calls into one
- SecurityConfig: restrict /documents/** to authenticated() instead of permitAll()
- DocumentController: fix route /document → /documents to match frontend
- LoginResponse: fix getter casing getrefreshToken() → getRefreshToken()

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>